--- a/Back-End/package.json
+++ b/Back-End/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "heroku": "^7.56.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.0",
     "ngrok": "^4.0.1",
