--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -22,15 +22,22 @@
     "native-base": "^3.0.2",
     "react": "17.0.1",
     "react-native": "^0.64.2",
+    "react-native-chart-kit": "^6.11.0",
+    "react-native-date-picker": "^3.3.2",
+    "react-native-dropdown-picker": "^5.1.21",
+    "react-native-element-dropdown": "^1.1.9",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
     "react-native-svg": "^12.1.1",
+    "react-native-vector-icons": "^8.1.0",
     "styled-components": "^5.3.0",
-    "styled-system": "^5.1.5"
+    "styled-system": "^5.1.5",
+    "victory-native": "^35.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
