--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -22,6 +22,7 @@
     "native-base": "^3.0.2",
     "react": "17.0.1",
     "react-native": "^0.64.2",
+    "react-native-animatable": "^1.3.3",
     "react-native-chart-kit": "^6.11.0",
     "react-native-date-picker": "^3.3.2",
     "react-native-dropdown-picker": "^5.1.21",
